Print server works but the printer complains about papaer size. the paper is A4 which is set by CUPS. Will try not set the default paper size and lt the printer/user  handle it.

--- a/ansible/roles/print-server/templates/cupsd.conf.j2
+++ b/ansible/roles/print-server/templates/cupsd.conf.j2
@@ -3,10 +3,9 @@
 LogLevel warn
 PageLogFormat
 
-Listen localhost:631
 {{ cups_listen }}
 
-Browsing {{ cups_browsing }}
+{{ cups_browsing }}
 BrowseLocalProtocols dnssd
 
 DefaultAuthType Basic
