Cleaned up bootstrap and create-vm

--- a/ansible/roles/shibernate/templates/shibernate.timer.j2
+++ b/ansible/roles/shibernate/templates/shibernate.timer.j2
@@ -1,8 +1,8 @@
 [Unit]
-Description=Run hibernate daily
+Description=Run hibernate-wakeup cycle every 4 minutes
 
 [Timer]
-OnCalendar={{ shibernate_oncalendar }}
+OnCalendar=*-*-* *:0/4:00
 Persistent=true
 
 [Install]
