--- a/ansible/roles/create-vm-template/templates/user-data.yml.j2
+++ b/ansible/roles/create-vm-template/templates/user-data.yml.j2
@@ -2,11 +2,15 @@
 users:
   - name: {{ template_user }}
     shell: /bin/bash
-    groups: sudo
     sudo: ALL=(ALL) NOPASSWD:ALL
-    lock_passwd: true
+    lock_passwd: false
     ssh_authorized_keys:
       - {{ template_ssh_key }}
 
+chpasswd:
+  list: |
+    {{ template_user }}:{{ template_password }}
+  expire: false
+
+ssh_pwauth: true
 disable_root: true
-ssh_pwauth: false
