--- a/ansible/roles/shibernate/templates/shibernate.service.j2
+++ b/ansible/roles/shibernate/templates/shibernate.service.j2
@@ -1,6 +1,6 @@
 [Unit]
-Description=Hibernate the system
+Description=Hibernate the system and wake after {{ shibernate_wakeup_offset }} seconds
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemctl hibernate
+ExecStart=/usr/sbin/rtcwake -m disk -s {{ shibernate_wakeup_offset }}
