--- a/ansible/roles/provision-vm-docker/templates/minecraft-docker-compose.yml.j2
+++ b/ansible/roles/provision-vm-docker/templates/minecraft-docker-compose.yml.j2
@@ -1,16 +1,21 @@
-version: "3.5"
+version: "3.3"
 
 services:
-  minecraft-server:
+  mc:
+    image: itzg/minecraft-server:latest
     container_name: minecraft-server
-    imageK itzg/minecraft-server
+    restart: unless-stopped
     ports:
-      - 25565:25565
+      - "{{ minecraft_server_port | default(25565) }}:25565"
     environment:
-        - TYPE=forge
-        - EULA=true
+      EULA: "TRUE"
+      TYPE: "FORGE"
+      MEMORY: "{{ minecraft_memory | default('4G') }}"
+      TZ: "{{ timezone | default('America/New_York') }}"
+      # Optional but helpful for Forge stability:
+      # VERSION: "1.20.1"
+      # FORGE_VERSION: "47.2.0"
     volumes:
-        - "./userdata/docker-volumes/minecraft:/opt/userdata"
-    stdin_open:true
-    tty:true
-    restart: unless_stopped
+      - "{{ minecraft_data_dir }}:/data"
+    stdin_open: true
+    tty: true
