--- a/ansible/roles/vm/provision-samba-file-server/templates/smb.conf.j2
+++ b/ansible/roles/vm/provision-samba-file-server/templates/smb.conf.j2
@@ -4,19 +4,21 @@
    map to guest = Bad User
    guest account = {{ samba_guest_user }}
    server min protocol = {{ samba_min_protocol }}
-   disable spoolss = yes
    log file = /var/log/samba/log.%m
    max log size = 1000
+   vfs objects = acl_xattr
+   map acl inherit = yes
+   store dos attributes = yes
+   disable spoolss = yes
 
 {% for share in samba_guest_shares %}
 [{{ share.name }}]
    path = {{ share.path }}
    browsable = yes
    read only = no
-   guest ok = yes
-   guest only = yes
-   force user = {{ samba_guest_user }}
-   force group = {{ samba_guest_group }}
-   create mask = 0666
-   directory mask = 0777
+   valid users = {{ share.valid_users }}
+   create mask = 0664
+   directory mask = 2775
+   inherit permissions = yes
+{% endif %}
 {% endfor %}
