--- a/ansible/roles/vm/provision-vm-docker/templates/minecraft-docker-compose.yml.j2
+++ b/ansible/roles/vm/provision-vm-docker/templates/minecraft-docker-compose.yml.j2
@@ -6,7 +6,7 @@ services:
     container_name: minecraft-server
     restart: unless-stopped
     ports:
-      - "{{ minecraft_server_port | default(25565) }}:25565"
+      - "{{ minecraft_docker_port | default(25565) }}:25565"
     environment:
       EULA: "TRUE"
       TYPE: "FORGE"
