--- a/ansible/roles/vm/provision-vm-docker/templates/npm-docker-compose.yml.j2
+++ b/ansible/roles/vm/provision-vm-docker/templates/npm-docker-compose.yml.j2
@@ -4,6 +4,7 @@ services:
     restart: unless-stopped
     ports:
       # These ports are in format <host-port>:<container-port>
+      - "{{ nginx_docker_port | default(81) }}:81"
       - '80:80' # Public HTTP Port
       - '443:443' # Public HTTPS Port
       - '81:81' # Admin Web Port
