Added alias for git merge

--- a/ansible/roles/ansible-host/setup-shell/templates/10-homelab.sh.j2
+++ b/ansible/roles/ansible-host/setup-shell/templates/10-homelab.sh.j2
@@ -19,6 +19,11 @@ alias gpl='git pull'
 alias gl='git log --oneline --graph --decorate --all'
 alias gd='git diff'
 alias gda='git diff .'
+alias gs='git switch'
+alias gsm='git switch main'
+alias gsd='git switch dev'
+alias gm='git merge'
+alias gmd='git merge dev'
 
 
 # --- Ansible ---
